--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -288,8 +288,9 @@ a {
 		//Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
 		box-shadow: 0 2px 4px $color_ironstone_12_approx;
 		//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+		//@include border-radius(2px 2px);
 		border-radius: 2px;
-		border: none;
+		border: 1px solid #EFEFEF;
 		font-size: 22px;
 		font-family: $font_0;
 		font-weight: 400;
@@ -424,8 +425,6 @@ a {
 	transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 	&:hover {
 		background: $black_2;
-		h3 {
-		}
 	}
 	img {
 		margin: 0 auto 0;
@@ -443,11 +442,6 @@ a {
 		color: $color_gravel_approx;
 		font-weight: 300;
 		line-height: 21px;
-	}
-	span {
-		font-size: 14px;
-		color: $color_mine_shaft_approx;
-		font-weight: 400;
 	}
 }
 .team-pic {
@@ -470,8 +464,7 @@ a {
 	//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
 	transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 	&:hover {
-		//Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-		box-shadow: 0 3px 12px $black_20;
+		text-decoration: underline;
 	}
 }
 .card-crop {
