--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -29,11 +29,17 @@ $font_1: sans-serif;
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,100italic,200,300,300italic,350,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
 html {
 	overflow-y: scroll;
+    padding: 0px;
+    margin: 0px;
+    height: 100%;
 }
 body {
 	display: block;
 	margin: 0;
 	font-family: $font_0, $font_1;
+	padding: 0px;
+    margin: 0px;
+    height: 100%;
 }
 h1 {
 	font-weight: 300;
@@ -819,4 +825,16 @@ input:focus {
 }
 * html .clearfix {
 	height: 1%;
+}
+
+#app {
+    padding: 0px;
+    margin: 0px;
+    height: 100%;
+}
+
+#app > div {
+    padding: 0px;
+    margin: 0px;
+    height: 100%;
 }
